# Rhythm

./: LICENSE  LOAD_INVESTIGATION.md  QUICKSTART.md  README.md  app.py  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml
Dev/: CLAUDE.md  Notes.md
Dev/AI context/Copilot/: AUDIO_FORMAT_FIX.md  AUDIO_FORMAT_SUMMARY.md  DEBUGGING_GUIDE.md  DOCUMENTATION_INDEX.md  DUPLICATE_OUTPUT_FIX.md  EXECUTIVE_SUMMARY.md  FIXES_APPLIED.md  METRONOME_FIX.md  PROJECT_STATUS.md  RECORDING_LIMITS_AND_PLAY_TOGGLE_FIX.md  RECORDING_PIPELINE.md  SOLUTION_SUMMARY.md  STATUS_UPDATE.md  TESTING4_DOCUMENTATION_INDEX.md  TESTING4_FINAL_CHECKLIST.md  TESTING4_FIX.md  TESTING4_IMPLEMENTATION_SUMMARY.md  TESTING4_RESOLUTION.md  TESTING4_VERIFICATION.md  TESTING6_RESOLUTION_SUMMARY.md
Dev/Copilot/: FINAL_REPORT.md  LONG_RECORDING_FIX.md  TESTING4_COMPLETE_FIX.md  TESTING4_QUICK_REFERENCE.md  TESTING6_FIX.md
Dev/Copilot/Haiku 4/: Apr 6
Dev/GPT/: GPT.5.3-Codex
Dev/demos/: kaggle.py
app/: __init__.py  audio_utils.py  data_samples.py  excercises.py  exercises.py  main.py  patterns.py  plotly-cloud.toml  recorder.js
app/assets/: recorder.js
dev/: CLAUDE.md  Notes.md  Plotly and Dash.md  bump  bump-version  dev.py  embed_samples.py  publish
docs/: DevNotes.md  README.md  index.html
