[project]
name = "rhythm"
version = "0.1.0"
description = "Explore rhythm feedback possibilities"
requires-python = ">=3.14"
dependencies = [
    "dash[cloud]>=2.14.0",
    "dash-bootstrap-components>=2.0.4",
    "pandas>=3.0.1",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "scipy>=1.11.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "ffmpeg==1.4",
    "pydub==0.25.1",
]
