[project]
name = "Rhythm_Analyzer"
version = "0.1.6"
description = "Explore rhythm feedback possibilities"
requires-python = ">=3.14"
dependencies = [
    "dash[cloud]>=2.14.0",
    "dash-bootstrap-components>=2.0.4",
    "pandas>=3.0.1",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "scipy>=1.11.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "ffmpeg==1.4",
    "pydub==0.25.1",
    "scipy-stubs~=1.17.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 88

[tool.bumpversion]
current_version = "0.1.6"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "{new_version} — {now:%Y-%m-%d}"
commit_message = "Bump version: {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "app/main.py"
search = 'VERSION = "{current_version}"'
replace = 'VERSION = "{new_version}"'

[[tool.bumpversion.files]]
filename = "app/recorder.js"
search = 'VERSION = "{current_version}"'
replace = 'VERSION = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docs/README.md"
search = 'Version {current_version}'
replace = 'Version {new_version}'